# pqxdh-spqr-matrix

./: .gitignore  README.md
pq-olm-bench/: Cargo.toml
pq-olm-bench/results/: 02_ratchet.csv  10_jitter.csv  all_results.json
pq-olm-bench/src/: bench_bandwidth.rs  bench_e2e.rs  bench_encrypt_decrypt.rs  bench_handshake.rs  bench_jitter.rs  bench_kem.rs  bench_key_sizes.rs  bench_message_size.rs  bench_ratchet.rs  bench_security.rs  helpers.rs  main.rs  output.rs  stats.rs
pqxdh-node/: Cargo.toml  warnings.txt
pqxdh-node/src/: group.rs  main.rs  megolm_store.rs
vodozemac-pqxdh/pq-olm-bench/: Cargo.toml  generate_charts.py
vodozemac-pqxdh/pq-olm-bench/results/: 01_handshake_full.txt  02_ratchet.csv  02_ratchet_full.txt  03_message_size_full.txt  04_security_full.txt  05_encrypt_decrypt_full.txt  06_key_sizes_full.txt  07_kem_primitives_full.txt  08_e2e_latency_full.txt  09_bandwidth_full.txt  10_jitter.csv  10_jitter_full.txt  11_megolm_full.txt  12_memory_full.txt  13_scaling_full.txt  all_results.json
vodozemac-pqxdh/pq-olm-bench/results/raw_csvs/: 01_handshake.initiator.classical.csv  01_handshake.initiator.pq.csv  01_handshake.responder.classical.csv  01_handshake.responder.pq.csv  01_handshake.roundtrip.classical.csv  01_handshake.roundtrip.pq.csv  02_ratchet.classical.csv  02_ratchet.pq.csv  05_encrypt_decrypt.1024B.decrypt.classical.csv  05_encrypt_decrypt.1024B.decrypt.pq.csv  05_encrypt_decrypt.1024B.encrypt.classical.csv  05_encrypt_decrypt.1024B.encrypt.pq.csv  05_encrypt_decrypt.256B.decrypt.classical.csv  05_encrypt_decrypt.256B.decrypt.pq.csv  05_encrypt_decrypt.256B.encrypt.classical.csv  05_encrypt_decrypt.256B.encrypt.pq.csv  05_encrypt_decrypt.64B.decrypt.classical.csv  05_encrypt_decrypt.64B.decrypt.pq.csv  05_encrypt_decrypt.64B.encrypt.classical.csv  05_encrypt_decrypt.64B.encrypt.pq.csv  07_kem_primitives.exchange.pqxdh_spqr_decaps.csv  07_kem_primitives.exchange.pqxdh_spqr_encaps.csv  07_kem_primitives.exchange.x3dh_dr_dh.csv  10_jitter.pqxdh_spqr.csv  (+20 more)
vodozemac-pqxdh/pq-olm-bench/src/: bench_bandwidth.rs  bench_e2e.rs  bench_encrypt_decrypt.rs  bench_handshake.rs  bench_jitter.rs  bench_kem.rs  bench_key_sizes.rs  bench_megolm.rs  bench_memory.rs  bench_message_size.rs  bench_ratchet.rs  bench_scaling.rs  bench_security.rs  helpers.rs  main.rs  output.rs  stats.rs
(+28 files in other folders)
