[package]
name = "pq-olm-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
vodozemac = { path = "../vodozemac-pqxdh" }
oqs = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
comfy-table = "7"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
