[package]
name = "pqxdh-node"
version = "0.1.0"
edition = "2021"

[dependencies]
vodozemac = { path = "../vodozemac-pqxdh" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oqs = "0.10"
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
