[package]
name = "pq-olm-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
vodozemac = { path = ".." }
oqs = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
indicatif = "0.17"
console = "0.15"
csv = "1.3"
chrono = "0.4"
rand = "0.8"
core_affinity = "0.8"
libc = "0.2"

[features]
default = []
charts = ["plotters"]

[dependencies.plotters]
version = "0.3"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
