[package]
name = "pq-olm-bench"
version = "0.2.0"
edition = "2021"

[dependencies]
vodozemac = { path = ".." }
oqs = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
csv = "1.3"
rand = "0.8"
core_affinity = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets"] }

[features]
default = []
charts = ["plotters"]

[dependencies.plotters]
version = "0.3"
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
